added progressive response

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 log = .
-log4j.rootLogger = DEBUG, LAMBDA
+log4j.rootLogger = INFO, LAMBDA
+log4j.category.de.xturbo77=DEBUG
 
 #Define the LAMBDA appender
 log4j.appender.LAMBDA=com.amazonaws.services.lambda.runtime.log4j.LambdaAppender
