--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,22 @@
             <version>1.9.40</version>
         </dependency>
 
+        <!-- Steam WEB API https://partner.steamgames.com/doc/webapi_overview -->
+        <!-- https://ribasco.github.io/async-gamequery-lib/examples/webapi_steam_example.html -->
         <dependency>
             <groupId>com.ibasco.agql</groupId>
             <artifactId>agql-steam-webapi</artifactId>
             <version>0.1.5</version>
         </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.13.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
@@ -96,8 +107,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
 
